# api/DTOs/SuppliesOrder/SuppliesOrderCreateDTO.cs
@@ -1,10 +1,17 @@
+using System.Collections.Generic;
+
 namespace ArqNetCore.DTOs.SuppliesOrder
 {
     public class SuppliesOrderCreateDTO
     {
         public string SupplyType { get; set; }
-        public string SupplyDescription { get; set; }
+        public IEnumerable<SuppliesOrderCreateAttributeDTO> SupplyAttributes { get; set; }
         public string AreaId { get; set; }
 
+    }
+    public class SuppliesOrderCreateAttributeDTO
+    {
+        public string SupplyAttributeName { get; set; }
+        public string SupplyAttributeValue { get; set; }
     }
 }
