# api/api.yaml
@@ -252,8 +252,15 @@ components:
       properties:
         supply_type:
           type: "string"
-        supply_description:
-          type: "string"
+        supply_attributes:
+          type: "array"
+          items: 
+            type: "object"
+            properties:
+              name:  
+                type: "string"
+              value:  
+               type: "string"
         area_id:
           type: "string"
       xml:
@@ -262,7 +269,8 @@ components:
       type: "object"
       properties:
         id:
-          type: "string"
+          type: "integer"
+          format: "int64"
       xml:
         name: "supplies-order"
     SuppliesOrderListResponseDTO:
@@ -274,8 +282,6 @@ components:
             properties:
               supply_type:
                 type: "string"
-              supply_description:
-                type: "string"
               area_id:
                 type: "string"
       xml:
@@ -285,8 +291,15 @@ components:
       properties:
         supply_type:
           type: "string"
-        supply_description:
-          type: "string"
+        supply_attributes:
+          type: "array"
+          items: 
+            type: "object"
+            properties:
+              type:  
+                type: "string"
+              value:  
+               type: "string"
         area_id:
           type: "string"
       xml:
